crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_nullable__tests__build_modify_column_nullable@postgres_nullable_users.snap
---
source: crates/vespertide-query/src/sql/modify_column_nullable.rs
expression: sql
---
ALTER TABLE "users" ALTER COLUMN "email" DROP NOT NULL
