crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_nullable__tests__delete_null_rows@mysql_delete_null_rows.snap
---
source: crates/vespertide-query/src/sql/modify_column_nullable.rs
expression: sql
---
DELETE FROM `orders` WHERE `user_id` IS NULL
ALTER TABLE `orders` MODIFY COLUMN `user_id` int NOT NULL
