crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_nullable__tests__delete_null_rows@sqlite_delete_null_rows.snap
---
source: crates/vespertide-query/src/sql/modify_column_nullable.rs
expression: sql
---
DELETE FROM "orders" WHERE "user_id" IS NULL
CREATE TABLE "orders_temp" ( "id" integer NOT NULL, "user_id" integer NOT NULL )
INSERT INTO "orders_temp" ("id", "user_id") SELECT "id", "user_id" FROM "orders"
DROP TABLE "orders"
ALTER TABLE "orders_temp" RENAME TO "orders"
